[GHO-80] Fix wrapping issue of soft footer on IE11 when the window is small

--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-footer/_cd-soft-footer.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-footer/_cd-soft-footer.scss
@@ -155,7 +155,10 @@
 }
 
 .cd-soft-footer .block-soft-footer-fts {
-  flex: 0 1 45%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  width: 45%;
 
   [dir='ltr'] & {
     text-align: right;
@@ -188,7 +191,10 @@
 }
 
 .cd-soft-footer .block-soft-footer-huminsight {
-  flex: 0 1 45%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  width: 45%;
 
   [dir='ltr'] & {
     text-align: left;
